# nif-structures

./: .gitignore  Dockerfile  LICENCE.md  README.md  environment.yml  setup.cfg
data/: README.md  ddkk-ancestral-variants.usalign.csv  pdb-processed-clean-table.csv  report_N2ases_PDB.json
data/benchmark/ddkk/: TM.scores.csv  mapping.yml
data/tree/: AGNifAlign103.asr.dist821.csv  AGNifAlign103.asr.tre  clade-asignments.csv  phylogenetic-relationships.csv
notebooks/: 00-pdb-structures.ipynb  01-benchmark.ipynb  02-sequence-space-analysis.ipynb  03-pLDDT.ipynb  04-structural-alignment.ipynb  05-structural-features.ipynb  06-ancestral.variants.ipynb  07-active-sites.ipynb  test-phylogenetic-tree.ipynb
pipeline/: 01-align.sh  02-rename-chains.ipynb  03-clean.ipynb  chains.json  env.yaml  pipeline.yaml
preparation/: 01-sequence-preparation.ipynb  02-realignment.ipynb
sequences/: AGNifAlign105.ext-anc.alt.D.fasta  AGNifAlign105.ext-anc.alt.H.fasta  AGNifAlign105.ext-anc.alt.K.fasta
server/: streamlit-e24.py
structures/: 00-statistics.ipynb  01-uniform-files.ipynb  02-extract-chain-info.ipynb  03-upload-s3.ipynb  04-features.ipynb  05-ancestral-variants.ipynb  06-active-site.ipynb  chain-reference.csv  env-sample.yaml  env.yaml  pipeline.yaml  reference.csv
