[metadata]
name = massive-nitrogenase-prediction
version = 0.0.0
author = Bruno Cuevas
author_email = brunocuevaszuviria@gmail.com
description = Massive protein structure prediction of the Nitrogenase extant and ancient structures
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
python_requires = >= 3.10.13
install_requires =
    streamlit==1.36.0
    streamlit-aggrid==0.3.4.post3
    toyplot==1.0.3
    toytree==2.0.1
    ProDy==2.4.1
    ploomber
    pandas
    py3Dmol
    scipy
    matplotlib
    seaborn
    stmol==0.0.9
    duckdb==1.0.0

include_package_data = True
[options.entry_points]
console_scripts =
    
